--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <p>从某视频开始学习，完成结果如下：</p>
 
         <div class="image-grid">
-          <img src="https://mp-df94476f-5e1c-49a0-9a47-d23718392015.cdn.bspapp.com/cloudstorage/tinified/mainUI.png"
+          <img src="https://bobodylan.com/LOGO.jpg"
             alt="图片1">
           <img src="https://mp-df94476f-5e1c-49a0-9a47-d23718392015.cdn.bspapp.com/cloudstorage/tinified/userUI.png"
             alt="图片2">
