更新图片地址

--- a/index.html
+++ b/index.html
@@ -92,20 +92,13 @@
       <div class="stage">
         <h3>阶段 1</h3>
         <p>从某视频开始学习，完成结果如下：</p>
-
         <div class="image-grid">
-          <img src="https://bobodylan.com/LOGO.jpg"
-            alt="图片1">
-          <img src="https://mp-df94476f-5e1c-49a0-9a47-d23718392015.cdn.bspapp.com/cloudstorage/tinified/userUI.png"
-            alt="图片2">
-          <img src="https://mp-df94476f-5e1c-49a0-9a47-d23718392015.cdn.bspapp.com/cloudstorage/tinified/classfiyUI.png"
-            alt="图片3">
-          <img src="https://mp-df94476f-5e1c-49a0-9a47-d23718392015.cdn.bspapp.com/cloudstorage/tinified/detailUI.png"
-            alt="图片4">
-          <img src="https://mp-df94476f-5e1c-49a0-9a47-d23718392015.cdn.bspapp.com/cloudstorage/tinified/detailBG.png"
-            alt="图片5">
-          <img src="https://mp-df94476f-5e1c-49a0-9a47-d23718392015.cdn.bspapp.com/cloudstorage/tinified/startUI.png"
-            alt="图片6">
+          <img src="https://bobodylan.com/webShowUI/mainUI.png" alt="图片1">
+          <img src="https://bobodylan.com/webShowUI/userUI.png" alt="图片2">
+          <img src="https://bobodylan.com/webShowUI/classfiyUI.png" alt="图片3">
+          <img src="https://bobodylan.com/webShowUI/detailUI.png" alt="图片4">
+          <img src="https://bobodylan.com/webShowUI/detailBG.png" alt="图片5">
+          <img src="https://bobodylan.com/webShowUI/startUI.png" alt="图片6">
         </div>
         <p><a
             href="https://www.bilibili.com/video/BV1Yg4y127Fp/?spm_id_from=333.1007.top_right_bar_window_custom_collection.content.click">学习链接</a>
